Fix home content centering on safari

--- a/static/sass/base.sass
+++ b/static/sass/base.sass
@@ -16,7 +16,7 @@ body
 
 main
   display: block
-  flex: 1 0 auto
+  flex: 1 0 0
 
 footer
   flex: 0 0 0
